[package]
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
categories = ["api-bindings"]
description = "API bindings for Google Sign-In"
documentation = "https://docs.rs/google-signin"
edition = "2018"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
license = "MIT/Apache-2.0"
name = "google-signin"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
version = "0.4.0"

[dependencies]
bytes = "^1"
cache_control = "0.1.0"
jsonwebtoken = "^7"
reqwest = { version = "^0.11.4", features = ["json", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
# futures = "^0.3.16"
tokio = { version = "^1.10.0", features = ["full"] }
